--- a/manifest.json
+++ b/manifest.json
@@ -2,44 +2,44 @@
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
   "name": "Push App",
   "short_name": "Push App",
-  "start_url": "/",
+  "start_url": "https://push-notification-react-firebase.vercel.app/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "description": "Uma aplicacao para testar push notification",
-  "scope": "/",
+  "scope": "https://push-notification-react-firebase.vercel.app/",
   "icons": [{
-    "src": "src/assets/icons/protech48.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech48.png",
     "sizes": "48x48",
     "type": "image/png",
     "purpose": "any maskable"
   }, {
-    "src": "src/assets/icons/protech72.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech72.png",
     "sizes": "72x72",
     "type": "image/png",
     "purpose": "any maskable"
   }, {
-    "src": "src/assets/icons/protech96.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech96.png",
     "sizes": "96x96",
     "type": "image/png",
     "purpose": "any maskable"
   }, {
-    "src": "src/assets/icons/protech144.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech144.png",
     "sizes": "144x144",
     "type": "image/png",
     "purpose": "any maskable"
   }, {
-    "src": "src/assets/icons/protech168.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech168.png",
     "sizes": "168x168",
     "type": "image/png",
     "purpose": "any maskable"
   }, {
-    "src": "src/assets/icons/protech192.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech192.png",
     "sizes": "192x192",
     "type": "image/png",
     "purpose": "any maskable"
   }, {
-    "src": "src/assets/icons/protech512.png",
+    "src": "https://push-notification-react-firebase.vercel.app/icons/protech512.png",
     "sizes": "512x512",
     "type": "image/png",
     "purpose": "any maskable"
